--- a/themes/nord/css/screen.css
+++ b/themes/nord/css/screen.css
@@ -95,7 +95,10 @@ a:hover {
 }
 
 #content img {
-    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
     height: auto;
 }
 
